Fixed the sidebar on mobile, sidebar now overlays on top of content Removed navbar menu items on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -49,8 +49,7 @@ a:focus {
 
 /* ---------------------------------------------------
     SIDEBAR STYLE
------------------------------------------------------ */
-
+----------------------------------------------------- */  
 .wrapper {
     display: flex;
     width: 100%;
@@ -194,10 +193,13 @@ a.article:hover {
         width: 100%;
     }
     #content.active {
-        width: calc(100% - 250px);
+        width: 100%;
     }
     #sidebarCollapse span {
         display: none;
+    }
+    #sidebarCollapse{
+        margin-left:auto
     }
 }
 
